--- a/gprmax_config.yaml
+++ b/gprmax_config.yaml
@@ -24,13 +24,14 @@ fractal_dimension: 1.5
 pep_soil_number: 5
 
 materials: {
-  ballast_stones: [6.5, 0, 1, 0],
-  water: [80, 0, 1, 0],
+  ballast: [6.5, 0, 1, 0],
   concrete: [8, 0.01, 1, 0],
   pss: [0.9, 0.1, 2, 2.66, 0.02, 0.03],
-  wood: [2, 0.01, 1, 0],
   gravel: [5, 0, 1, 0],
-  fouling: [0.9, 0.1, 2, 2.66, 0.02, 0.03]
+  fouling: [0.9, 0.1, 2, 2.66, 0.02, 0.03],
+  wood: [2, 0.01, 1, 0],
+  steel: [1, 0, 1000, 0],
+  asphalt: [8, 0.01, 1, 0],
 }
 
 # TODO: Should the layers be fully specified here?
@@ -46,6 +47,7 @@ layer_sizes: [0.15, 0.3, 0.55, 0.7]
 # sleepers
 sleepers_separation: 0.65
 sleepers_material: ["all"]
+sleepers_size: [0.17, 0.10, 0.002]
 
 # fouling and water content
 max_fouling_level: 0.15
