--- a/gprmax_config.yaml
+++ b/gprmax_config.yaml
@@ -34,15 +34,8 @@ materials: {
   asphalt: [8, 0.01, 1, 0],
 }
 
-# TODO: Should the layers be fully specified here?
-layers:
-  - gravel
-  - asphalt
-  - pss
-  - ballast
-  - sleepers
-
-layer_sizes: [0.15, 0.3, 0.55, 0.7]
+layer_sizes: [0.15, 0.30, 0.55, 0.70]
+layer_deviations: [0.03, 0.03, 0.05, 0.05]
 
 # sleepers
 sleepers_separation: 0.65
