--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,53 @@
-numpy
-pymunk
+alabaster==0.7.13
+annotated-types==0.6.0
+Babel==2.13.1
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+commonmark==0.9.1
+contourpy==1.2.0
+cycler==0.12.1
+distlib==0.3.7
+docutils==0.18.1
+filelock==3.13.1
+fonttools==4.43.0
+h5py==3.10.0
+idna==3.4
+imagesize==1.4.1
+Jinja2==3.1.2
+kiwisolver==1.4.5
+MarkupSafe==2.1.3
+matplotlib==3.8.2
+numpy==1.26.2
+packaging==23.2
+Pillow==10.1.0
+platformdirs==3.11.0
+pycparser==2.21
+pydantic==2.5.1
+pydantic_core==2.14.3
+pygame==2.5.2
+Pygments==2.17.1
+pymunk==6.6.0
+pyparsing==3.1.1
+python-dateutil==2.8.2
+PyYAML==6.0.1
+readthedocs-sphinx-ext==2.2.3
+recommonmark==0.7.1
+requests==2.31.0
+six==1.16.0
+snowballstemmer==2.2.0
+Sphinx==7.2.6
+sphinx-rtd-theme==1.3.0
+sphinxcontrib-applehelp==1.0.7
+sphinxcontrib-devhelp==1.0.5
+sphinxcontrib-htmlhelp==2.0.4
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.6
+sphinxcontrib-serializinghtml==1.1.9
+terminaltables==3.1.10
+tqdm==4.66.1
+typing_extensions==4.8.0
+urllib3==2.1.0
+virtualenv==20.24.6
