added requirements files and install script to create env

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ data/
 gprmax_input_files/generated/
 gprmax_tmp_files/
 gprmax_output_files/
-
+gprmax_repo/
 
 
 # Byte-compiled / optimized / DLL files
