--- a/gprmax_config.yaml
+++ b/gprmax_config.yaml
@@ -49,4 +49,4 @@ max_fouling_water: 0.15
 max_pss_water: 0.15
 
 # wavefield snapshots
-snapshot_times: [0.5e-9, 1.0e-9, 1.5e-9, 2.0e-9, 2.5e-9, 3.0e-9, 3.5e-9, 4.0e-9, 4.5e-9, 5.0e-9]
+snapshot_times: [1.0e-09, 2.0e-09, 3.0e-09, 4.0e-09, 5.0e-09, 6.0e-09, 7.0e-09, 8.0e-09, 9.0e-09, 1.0e-08, 1.1e-08, 1.2e-08, 1.3e-08, 1.4e-08, 1.5e-08, 1.6e-08, 1.7e-08, 1.8e-08, 1.9e-08, 2.0e-08, 2.1e-08, 2.2e-08, 2.3e-08, 2.4e-08]
