--- a/gprmax_config.yaml
+++ b/gprmax_config.yaml
@@ -1,7 +1,7 @@
 #######################
 # general configuration
 #######################
-n_samples: 2
+n_samples: 1
 n_ascans: 1
 
 generate_input: false
@@ -40,13 +40,21 @@ materials: {
   wood: [2, 0.01, 1, 0],
   steel: [1, 1.4e6, 1000, 0],
   asphalt: [8, 0.01, 1, 0],
-  # peplinsky soils: the last two values are min and max water content across samples, 
-  # the actual values will be sampled during dataset creation based on general 
-  # water content of the sample.
-  fouling: [0, 1, 3, 2.66, 0.03, 0.18],
-  PSS: [0.9, 0.1, 2, 2.66, 0.03, 0.18],
-  subgrade: [0.9, 0.1, 2, 2.66, 0.03, 0.18],
-  subsoil: [1, 0, 2, 2.66, 0.03, 0.18],
+  # peplinsky soils: the values are in order:
+  #  - sand fraction
+  #  - clay fraction
+  #  - bulk density
+  #  - sand particle density
+  #  - min and max water content
+  # the actual values will be a linear interpolation of the healty and deteriorated state, 
+  # sampled during dataset creation based on general deterioration and water content of the sample.
+  fouling: [0.28, 0.12, 1.9, 2.65, 0.05, 0.20],
+  PSS_healty: [0.48, 0.02, 2.3, 2.65, 0.05, 0.20],
+  PSS_deteriorated: [0.35, 0.30, 2.3, 2.65, 0.05, 0.20],
+  subgrade_healty: [0.22, 0.01, 2.1, 2.65, 0.05, 0.20],
+  subgrade_deteriorated: [0.20, 0.30, 2.2, 2.65, 0.05, 0.20],
+  subsoil_good: [0.27, 0.03, 2, 2.65, 0.05, 0.20],
+  subsoil_problematic: [0.65, 0.35, 2.1, 2.65, 0.05, 0.20],
 }
 
 antenna_sleeper_distance: 0.465
@@ -68,13 +76,22 @@ layer_roughness: {
 
 # sleepers
 sleepers_separation: 0.65
-sleepers_material: ["all"]
-sleepers_size: [0.17, 0.10, 0.002]
+sleepers_material_probabilities: {
+  "wood": 0.45,
+  "concrete": 0.45,
+  "steel": 0.1
+}
+sleepers_sizes: {
+  "wood": [0.26, 0.15, 0.002],
+  "concrete": [0.25, 0.23, 0.002],
+  "steel": [0.32, 0.10, 0.002],
+}
 
 # fouling and water content
 fouling_box_threshold: 0.7
-fouling_water_range: [0.03, 0.15]
-pss_water_range: [0.03, 0.15]
+water_infiltration_threshold: 0.8
+
 
 # wavefield snapshots
-snapshot_times: [1.0e-09, 2.0e-09, 3.0e-09, 4.0e-09, 5.0e-09, 6.0e-09, 7.0e-09, 8.0e-09, 9.0e-09, 1.0e-08, 1.1e-08, 1.2e-08, 1.3e-08, 1.4e-08, 1.5e-08, 1.6e-08, 1.7e-08, 1.8e-08, 1.9e-08, 2.0e-08, 2.1e-08, 2.2e-08, 2.3e-08, 2.4e-08]
+# snapshot_times: [1.0e-09, 2.0e-09, 3.0e-09, 4.0e-09, 5.0e-09, 6.0e-09, 7.0e-09, 8.0e-09, 9.0e-09, 1.0e-08, 1.1e-08, 1.2e-08, 1.3e-08, 1.4e-08, 1.5e-08, 1.6e-08, 1.7e-08, 1.8e-08, 1.9e-08, 2.0e-08, 2.1e-08, 2.2e-08, 2.3e-08, 2.4e-08]
+snapshot_times: []
