--- a/gprmax_config.yaml
+++ b/gprmax_config.yaml
@@ -5,6 +5,7 @@ n_samples: 1
 n_ascans: 1
 
 generate_input: false
+run_simulations: false
 geometry_only: false
 
 input_dir: "gprmax_input_files/generated/"
