--- a/gprmax_config.yaml
+++ b/gprmax_config.yaml
@@ -27,8 +27,8 @@ time_window: 2.5e-08
 source_waveform: "ricker"
 source_amplitude: 1
 source_central_frequency: 1000000000
-source_position: [0.2, 1.50, 0.001]
-receiver_position: [0.35, 1.50, 0.001]
+source_position: [0.65, 1.50, 0.001]
+receiver_position: [0.85, 1.50, 0.001]
 step_size: [0.02, 0, 0]
 
 fractal_dimension: 1.5
@@ -94,5 +94,5 @@ water_infiltration_threshold: 0.8
 
 
 # wavefield snapshots
-# snapshot_times: [1.0e-09, 2.0e-09, 3.0e-09, 4.0e-09, 5.0e-09, 6.0e-09, 7.0e-09, 8.0e-09, 9.0e-09, 1.0e-08, 1.1e-08, 1.2e-08, 1.3e-08, 1.4e-08, 1.5e-08, 1.6e-08, 1.7e-08, 1.8e-08, 1.9e-08, 2.0e-08, 2.1e-08, 2.2e-08, 2.3e-08, 2.4e-08]
-snapshot_times: []
+snapshot_times: [2.0e-09, 3.0e-09, 4.0e-09, 5.0e-09, 6.0e-09, 7.0e-09, 8.0e-09, 9.0e-09, 1.0e-08, 1.1e-08, 1.2e-08, 1.3e-08, 1.4e-08, 1.5e-08, 1.6e-08, 1.7e-08, 1.8e-08, 1.9e-08, 2.0e-08, 2.1e-08, 2.2e-08, 2.3e-08, 2.4e-08, 2.5e-8]
+# snapshot_times: []
