--- a/bscan_dataset_config.yaml
+++ b/bscan_dataset_config.yaml
@@ -108,3 +108,5 @@ general_deterioration_beta_params: [1.2, 2.5]
 # wavefield snapshots
 # snapshot_times: [2.0e-09, 3.0e-09, 4.0e-09, 5.0e-09, 6.0e-09, 7.0e-09, 8.0e-09, 9.0e-09, 1.0e-08, 1.1e-08, 1.2e-08, 1.3e-08, 1.4e-08, 1.5e-08, 1.6e-08, 1.7e-08, 1.8e-08, 1.9e-08, 2.0e-08, 2.1e-08, 2.2e-08, 2.3e-08, 2.4e-08, 2.5e-8]
 snapshot_times: []
+
+create_views: False
